syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.grpc";
option java_outer_classname = "SendQueueProto";

service RequestTakerService {
  rpc SendQueue (GrpcSendQueueRequest) returns (GrpcSendQueueResponse);
}

message GrpcSendQueueRequest {
  int64 userId = 1;
  string username = 2;
  int64 eventId = 3;
  string traceId = 4;
}

message GrpcSendQueueResponse {
  int64 userId = 1;
  int64 eventId = 2;
  string username = 3;
  string status = 4;
  int64 rank = 5;
}
