package com.example.authentication.service;


import com.example.authentication.request.BookingRequest;
import com.example.grpc.booking.BookingServiceGrpc;
import com.example.grpc.booking.GrpcBookingRequest;
import com.example.grpc.booking.GrpcBookingResponse;
import lombok.RequiredArgsConstructor;
import net.devh.boot.grpc.client.inject.GrpcClient;
import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
import org.springframework.stereotype.Service;

import java.util.HashMap;
import java.util.Map;

@Service
@RequiredArgsConstructor
public class BookingService {

    private final BCryptPasswordEncoder encoder = new BCryptPasswordEncoder();

    // üëá gRPC client t·ª± ƒë·ªông inject theo t√™n trong application.yml
    @GrpcClient("booking-service")
    private BookingServiceGrpc.BookingServiceBlockingStub blockingStub;

    public Map<String, Object> booking(BookingRequest request) {
//         T·∫°o request t·ª´ proto
        GrpcBookingRequest grpcBookingRequest = GrpcBookingRequest.newBuilder()
                .setUserId(request.getUserId())
                .addAllSeatIds(request.getSeatIds())
                .build();

        // G·ªçi t·ªõi AuthService (·ªü server)
        GrpcBookingResponse response = blockingStub.createBooking(grpcBookingRequest);

        // Map k·∫øt qu·∫£ tr·∫£ v·ªÅ
        Map<String, Object> result = new HashMap<>();
        result.put("status", response.getStatus());
        return result;
    }
}
