package com.example.authentication.service;


import com.example.authentication.request.OrderRequest;
import com.example.grpc.booking.*;
import lombok.RequiredArgsConstructor;
import net.devh.boot.grpc.client.inject.GrpcClient;
import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
import org.springframework.stereotype.Service;

import java.util.HashMap;
import java.util.Map;

@Service
@RequiredArgsConstructor
public class OrderService {

    private final BCryptPasswordEncoder encoder = new BCryptPasswordEncoder();

    // üëá gRPC client t·ª± ƒë·ªông inject theo t√™n trong application.yml
    @GrpcClient("booking-service")
    private BookingServiceGrpc.BookingServiceBlockingStub blockingStub;

    public Map<String, Object> order(OrderRequest request) {
//         T·∫°o request t·ª´ proto
        GrpcOrderRequest grpcOrderRequest = GrpcOrderRequest.newBuilder()
                .setUserId(request.getUserId())
                .addAllSeatIds(request.getSeatIds())   // ‚ùó d√πng addAll thay v√¨ setSeatIds
                .setPrice(request.getPrice())
                .build();

        // G·ªçi t·ªõi AuthService (·ªü server)
        GrpcOrderResponse response = blockingStub.order(grpcOrderRequest);

        // Map k·∫øt qu·∫£ tr·∫£ v·ªÅ
        Map<String, Object> result = new HashMap<>();
        result.put("status", response.getStatus());
        result.put("orderId", response.getOrderId());
        return result;
    }
}
