package com.example.authentication.service;


import com.example.authentication.request.OrderRequest;
import com.example.authentication.request.PaymentRequest;
import com.example.grpc.booking.*;
import lombok.RequiredArgsConstructor;
import net.devh.boot.grpc.client.inject.GrpcClient;
import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
import org.springframework.stereotype.Service;

import java.util.HashMap;
import java.util.Map;

@Service
@RequiredArgsConstructor
public class PaymentService {

    private final BCryptPasswordEncoder encoder = new BCryptPasswordEncoder();

    // üëá gRPC client t·ª± ƒë·ªông inject theo t√™n trong application.yml
    @GrpcClient("booking-service")
    private BookingServiceGrpc.BookingServiceBlockingStub blockingStub;

    public Map<String, Object> payment(PaymentRequest request) {
//         T·∫°o request t·ª´ proto
        GrpcPaymentRequest grpcPaymentRequest = GrpcPaymentRequest.newBuilder()
                .setOrderId(request.getOrderId())
                .setStatus(request.getStatus())
                .setTotalPrice(request.getTotalPrice())
                .build();

        // G·ªçi t·ªõi AuthService (·ªü server)
        GrpcPaymentResponse response = blockingStub.payment(grpcPaymentRequest);

        // Map k·∫øt qu·∫£ tr·∫£ v·ªÅ
        Map<String, Object> result = new HashMap<>();
        result.put("status", response.getStatus());
        result.put("orderId", response.getOrderId());
        return result;
    }
}
